# defect-detect

./: CMakeLists.txt  LICENSE  README  README.md  build.sh
config/: canny-accelarator.json  canny_accel.json  cca-accelarator.json  defect-calculation.json  edge-tracer.json  edge_tracer.json  otsu-accelarator.json  pre-process.json  pre_pros.json  preprocess-accelarator.json  text2overlay.json
notebook/: LICENSE  defect-detect.ipynb
script/: 01.file-defect-detect-display.sh  02.mipi-defect-detect-display-demo-mode.sh  aa4.sh  ar0144-sensor-calib.sh  defect-detect-install.py  defect-detect.sh
src/: ivas_canny_edge.c  ivas_cca.c  ivas_defectcalc.cpp  ivas_defectdetection.c  ivas_edge_tracer.c  ivas_otsu.c  ivas_preprocess.c  ivas_text2overlay.cpp  ivas_text2overlay.hpp  main.cpp  vvas_cca.c  vvas_otsu.c  vvas_preprocess.c  vvas_text2overlay.cpp
